Implemented details screen, handle recyclerview onClickItem, passing data using navArgs

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,5 +7,19 @@
     <fragment
         android:id="@+id/galleryFragment"
         android:name="com.rohith.imagesearchapp.ui.GalleryFragment"
-        android:label="GalleryFragment" />
+        android:label="Gallery" >
+        <action
+            android:id="@+id/action_galleryFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.rohith.imagesearchapp.ui.DetailsFragment"
+        android:label="Photo" >
+        <argument
+            android:name="selectedPhoto"
+            app:argType="com.rohith.imagesearchapp.data.UnsplashPhotoModel" />
+    </fragment>
 </navigation>
